Fixed history box issue on small screen

--- a/src/site/shared/containers/HistoryBox/index.scss
+++ b/src/site/shared/containers/HistoryBox/index.scss
@@ -15,6 +15,8 @@ $historybox-width: 250px;
     bottom: 0px;
     z-index: 4;
 
+    overflow-y: hidden;
+
     padding-bottom: 10px;
 
     transition: all 0.5s;
@@ -50,18 +52,20 @@ $historybox-width: 250px;
     & > div:last-child {
         height: $historybox-height;
 
-        overflow-y: auto;
+        overflow-y: scroll;
     }
 
     &__move {
-        @media (min-width: 768px) {
-            left: 0px;
-        }
+        & > div:last-child {
+            @media (min-width: 768px) {
+                left: 0px;
+            }
 
-        @media (max-width: 768px) {
-            margin-bottom: 0px;
-            left: 0px;
-            height: $historybox-height;
+            @media (max-width: 768px) {
+                margin-bottom: 0px;
+                left: 0px;
+                height: $historybox-height;
+            }
         }
     }
 
